# CoroSensorSimulationExperiment

./: .gitignore  README.md
SensorSimulation/: simulateData.py  simulateSensor.py
SensorSimulation/objects/: sensor.urdf  sphere_small.urdf
TactileSensorSimulationComm/: CMakeLists.txt  comm.cpp  comm.h  test.cpp
sensorCharacterisation/: GenerateFunctionsFromLogs.py  param.json
sensorCharacterisation/logging/: sensor_characterisation.py
